# dj-tools

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  beatport_analyze.py  caffeinate.py  clear_beatport_auth.py  dj_cli.py  dj_import.py  get_mix_info.py  import_to_rekordbox.py  paths.py  pipeline.py  pyproject.toml  track_db.py
connections/: beatport.py  brave_cookies.py  matching.py  musickit.py  soundcloud.py  soundcloud_browser.py
detect/: cli.py  db.py  dj_studio_analyze.js  dj_studio_sdk.js  enrich.py  enrich_studio.py  export_to_rekordbox.py  gems.py  import_rekordbox_analysis.py  import_to_studio.py  instagram.py  mixcloud.py  parser.py  podbean.py  radio.py  reddit.py  shazam.py  soundcloud.py  spotify.py  studio_analyse.py  studio_sdk.py  sync_beatport.py  text.py  topdjmixes.py  tracklists1001.py  youtube.py
djstudio/: __init__.py  display.py  extractor.py  keys.py
helpers/: analyse_playlist_keys.py  backup_apple_music.py  cleanup_playlist.py  clear_apple_music.py  course_backfill_sections.py  course_cleanup_tabs.py  course_recon.py  dedupe_enriched_tracks.py  delete_beatport_track.py  diagnose_sdk_audio_error.py  download_course.py  export_apple_music.py  restore_apple_music.py  update_rekordbox_keys.py
local-analyse/: beatport_analyze.py  beatport_auth.py  djs_analyze.js
playlist/: cli.py  query.py  to_beatport.py  to_djstudio.py  to_rekordbox.py
poc/: dj_studio_poc.py  mik_analyze.js
rekordbox/: __init__.py  backup.py  constants.py  cues.py  display.py  importer.py  utils.py
sync/: cli.py  db.py  sync.py
tests/: conftest.py  (+12 more)
(+21 files in other folders)
