[project]
name = "dj-tools"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyrekordbox",
    # detect
    "rich>=13",
    "instagrapi>=2.1",
    "shazamio>=0.4",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
    "yt-dlp>=2025.5",
    "mutagen>=1.47",
    "cryptography>=42",
    "psutil>=5.9",
    # sync
    "playwright>=1.58",
    "playwright-stealth>=1.0",
]

[project.scripts]
dj = "dj_cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dj_cli", "paths", "caffeinate"]

[tool.setuptools.packages.find]
include = ["detect*", "sync*", "playlist*", "connections*", "djstudio*", "rekordbox*", "helpers*"]
